--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="action">
-            <i class="ph ph-x"></i>
+            <i class="ph ph-x" id="remove"></i>
           </div>
         </div>
 
@@ -58,6 +58,9 @@
               <progress value="100" max="100"></progress>
               <span>100%</span>
             </div>
+          </div>
+          <div class="action">
+            <i class="ph ph-x" id="remove"></i>
           </div>
         </div>
 
